force-app/src/objects/cpm__Matching_Object_Setting__c.object
<CustomObject>
    <fields>
        <fullName>cpm__AccountId_field__c</fullName>
        <label>AccountId field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__AutomatchResult_Field__c</fullName>
        <label>AutomatchResult Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__CampaignId_field__c</fullName>
        <label>CampaignId field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__ContactId_field__c</fullName>
        <label>ContactId field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__DestinationId_field__c</fullName>
        <label>DestinationId field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Find_in_Object__c</fullName>
        <inlineHelpText>In what object are we searching for the value of the selected transaction field</inlineHelpText>
        <label>Find in Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__RelatedId_field__c</fullName>
        <inlineHelpText>When selecting result type &quot;Related&quot; please fill in the lookup id field to the object you want to display.&lt;br&gt; 
Example: Searching on IBAN in &quot;Payment Profiles&quot; to show contacts of the found payment profiles fill in contact__c</inlineHelpText>
        <label>RelatedId field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__ResultType__c</fullName>
        <label>ResultType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Transaction_Field__c</fullName>
        <label>Transaction Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Matching Object Setting</label>
    <nameField>
        <displayFormat>MOS-{0}</displayFormat>
        <label>Matching Object Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>